--- a/source/xborder/platforms/android/assets/www/topcoat/css/topcoat-mobile-dark.css
+++ b/source/xborder/platforms/android/assets/www/topcoat/css/topcoat-mobile-dark.css
@@ -623,7 +623,7 @@ limitations under the License.
   border-top: 1px solid #2f3234;
   border-bottom: 1px solid #eff1f1;
 /*  background-color: #444849;*/
-    background-color:#7c7c7c;
+    background-color:#8d8d8d;
 }
 .topcoat-list__header {
   margin: 0;
