--- a/source/xborder/platforms/android/res/xml/config.xml
+++ b/source/xborder/platforms/android/res/xml/config.xml
@@ -23,4 +23,7 @@
     <preference name="fullscreen" value="false" />
     <preference name="webviewbounce" value="false" />
     <preference name="DisallowOverscroll" value="true" />
+    <feature name="Notification">
+        <param name="android-package" value="org.apache.cordova.dialogs.Notification" />
+    </feature>
 </widget>
